examples/test/testpolicy14949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14949
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key14: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value31
          key21: value19
          key30: value22
      podSelector:
        matchLabels:
          key27: value34
          key44: value0
